Category logic added and refactoring some code